k8s/custom-manifests/app-deployment.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
#app-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deployment
  namespace: app
  labels:
    app: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: gcr.io/dangaiden-go-cicd/goserver:v1
        ports:
        - containerPort: 8080
---
#app-service
kind: Service
apiVersion: v1
metadata:
  name: go-service
  namespace: app
spec:
  selector:
    app: go-app
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
