k8s/custom-manifests/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "external-nginx"
    cert-manager.io/cluster-issuer: letsencrypt-http01-prod
spec:
  tls:
  - hosts:
    - holded.itgaiden.com
    secretName: holded.itgaiden.com-key-pair
  rules:
  - host: holded.itgaiden.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-service
            port:
              number: 80
